--- a/requirements.txt
+++ b/requirements.txt
@@ -1,69 +1,69 @@
 annotated-types==0.6.0; python_version >= '3.8'
-anyio==3.7.1; python_version >= '3.7'
+anyio==4.2.0; python_version >= '3.8'
 asttokens==2.4.1
 certifi==2023.11.17; python_version >= '3.6'
 charset-normalizer==3.3.2; python_full_version >= '3.7.0'
 click==8.1.7; python_version >= '3.7'
 colorama==0.4.6; platform_system == 'Windows'
-comm==0.2.0; python_version >= '3.8'
+comm==0.2.1; python_version >= '3.8'
 contourpy==1.2.0; python_version >= '3.9'
 cycler==0.12.1; python_version >= '3.8'
 debugpy==1.8.0; python_version >= '3.8'
 decorator==5.1.1; python_version >= '3.5'
 executing==2.0.1; python_version >= '3.5'
-fastapi==0.104.1; python_version >= '3.8'
-fonttools==4.44.3; python_version >= '3.8'
+fastapi==0.108.0; python_version >= '3.8'
+fonttools==4.47.0; python_version >= '3.8'
 h11==0.14.0; python_version >= '3.7'
-idna==3.4; python_version >= '3.5'
-ipykernel==6.26.0; python_version >= '3.8'
-ipython==8.17.2; python_version >= '3.9'
+idna==3.6; python_version >= '3.5'
+ipykernel==6.28.0; python_version >= '3.8'
+ipython==8.19.0; python_version >= '3.10'
 jedi==0.19.1; python_version >= '3.6'
 joblib==1.3.2; python_version >= '3.7'
 jupyter-client==8.6.0; python_version >= '3.8'
-jupyter-core==5.5.0; python_version >= '3.8'
+jupyter-core==5.6.1; python_version >= '3.8'
 kiwisolver==1.4.5; python_version >= '3.7'
 littleutils==0.2.2
 matplotlib==3.8.2; python_version >= '3.9'
-matplotlib-inline==0.1.6; python_version >= '3.5'        
+matplotlib-inline==0.1.6; python_version >= '3.5'
 nest-asyncio==1.5.8; python_version >= '3.5'
-numpy==1.26.2; python_version >= '3.9'
+numpy==1.26.3; python_version >= '3.9'
 outdated==0.2.2
 packaging==23.2; python_version >= '3.7'
-pandas==2.1.3; python_version >= '3.9'
+pandas==2.1.4; python_version >= '3.9'
 pandas-flavor==0.6.0
 parso==0.8.3; python_version >= '3.6'
-patsy==0.5.3
-pillow==10.1.0; python_version >= '3.8'
+patsy==0.5.5
+pillow==10.2.0; python_version >= '3.8'
 pingouin==0.5.3
-platformdirs==4.0.0; python_version >= '3.7'
-prompt-toolkit==3.0.41; python_full_version >= '3.7.0'
-psutil==5.9.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+platformdirs==4.1.0; python_version >= '3.8'
+prompt-toolkit==3.0.43; python_full_version >= '3.7.0'
+psutil==5.9.7; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'     
 pure-eval==0.2.2
-pydantic==2.5.1; python_version >= '3.7'
-pydantic-core==2.14.3; python_version >= '3.7'
-pygments==2.16.1; python_version >= '3.7'
+pydantic==2.5.3; python_version >= '3.7'
+pydantic-core==2.14.6; python_version >= '3.7'
+pygments==2.17.2; python_version >= '3.7'
 pyparsing==3.1.1; python_full_version >= '3.6.8'
-python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'      
 pytz==2023.3.post1
 pywin32==306; sys_platform == 'win32' and platform_python_implementation != 'PyPy'
-pyzmq==25.1.1; python_version >= '3.6'
+pyzmq==25.1.2; python_version >= '3.6'
 requests==2.31.0; python_version >= '3.7'
 scikit-learn==1.3.2; python_version >= '3.8'
-scipy==1.11.3; python_version < '3.13' and python_version >= '3.9'
-seaborn==0.13.0; python_version >= '3.8'
-setuptools==68.2.2; python_version >= '3.8'
+scipy==1.11.4; python_version >= '3.9'
+seaborn==0.13.1; python_version >= '3.8'
+setuptools==69.0.3; python_version >= '3.8'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sniffio==1.3.0; python_version >= '3.7'
 stack-data==0.6.3
-starlette==0.27.0; python_version >= '3.7'
-statsmodels==0.14.0; python_version >= '3.8'
+starlette==0.32.0.post1; python_version >= '3.8'
+statsmodels==0.14.1; python_version >= '3.8'
 tabulate==0.9.0; python_version >= '3.7'
 threadpoolctl==3.2.0; python_version >= '3.8'
-tornado==6.3.3; python_version >= '3.8'
-traitlets==5.13.0; python_version >= '3.8'
-typing-extensions==4.8.0; python_version >= '3.8'
-tzdata==2023.3; python_version >= '2'
+tornado==6.4; python_version >= '3.8'
+traitlets==5.14.1; python_version >= '3.8'
+typing-extensions==4.9.0; python_version >= '3.8'
+tzdata==2023.4; python_version >= '2'
 urllib3==2.1.0; python_version >= '3.8'
-uvicorn==0.24.0.post1; python_version >= '3.8'
-wcwidth==0.2.10
-xarray==2023.11.0; python_version >= '3.9'
+uvicorn==0.25.0; python_version >= '3.8'
+wcwidth==0.2.12
+xarray==2023.12.0; python_version >= '3.9'
