--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+aiofiles==23.2.1; python_version >= '3.7'
+altair==5.2.0; python_version >= '3.8'
 annotated-types==0.6.0; python_version >= '3.8'
 anyio==4.2.0; python_version >= '3.8'
 asttokens==2.4.1
+attrs==23.2.0; python_version >= '3.7'
 certifi==2023.11.17; python_version >= '3.6'
 charset-normalizer==3.3.2; python_full_version >= '3.7.0'
 click==8.1.7; python_version >= '3.7'
@@ -11,22 +14,38 @@ cycler==0.12.1; python_version >= '3.8'
 debugpy==1.8.0; python_version >= '3.8'
 decorator==5.1.1; python_version >= '3.5'
 executing==2.0.1; python_version >= '3.5'
-fastapi==0.108.0; python_version >= '3.8'
-fonttools==4.47.0; python_version >= '3.8'
+fastapi==0.109.0; python_version >= '3.8'
+ffmpy==0.3.1
+filelock==3.13.1; python_version >= '3.8'
+fonttools==4.47.2; python_version >= '3.8'
+fsspec==2023.12.2; python_version >= '3.8'
+gradio==4.14.0; python_version >= '3.8'
+gradio-client==0.8.0; python_version >= '3.8'
 h11==0.14.0; python_version >= '3.7'
+httpcore==1.0.2; python_version >= '3.8'
+httpx==0.26.0; python_version >= '3.8'
+huggingface-hub==0.20.2; python_full_version >= '3.8.0'
 idna==3.6; python_version >= '3.5'
+importlib-resources==6.1.1; python_version >= '3.8'
 ipykernel==6.28.0; python_version >= '3.8'
 ipython==8.20.0; python_version >= '3.10'
 jedi==0.19.1; python_version >= '3.6'
+jinja2==3.1.3; python_version >= '3.7'
 joblib==1.3.2; python_version >= '3.7'
+jsonschema==4.20.0; python_version >= '3.8'
+jsonschema-specifications==2023.12.1; python_version >= '3.8'
 jupyter-client==8.6.0; python_version >= '3.8'
 jupyter-core==5.7.1; python_version >= '3.8'
 kiwisolver==1.4.5; python_version >= '3.7'
 littleutils==0.2.2
+markdown-it-py==3.0.0; python_version >= '3.8'
+markupsafe==2.1.3; python_version >= '3.7'
 matplotlib==3.8.2; python_version >= '3.9'
 matplotlib-inline==0.1.6; python_version >= '3.5'
+mdurl==0.1.2; python_version >= '3.7'
 nest-asyncio==1.5.8; python_version >= '3.5'
 numpy==1.26.3; python_version >= '3.9'
+orjson==3.9.10; python_version >= '3.8'
 outdated==0.2.2
 packaging==23.2; python_version >= '3.7'
 pandas==2.1.4; python_version >= '3.9'
@@ -41,29 +60,42 @@ psutil==5.9.7; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2,
 pure-eval==0.2.2
 pydantic==2.5.3; python_version >= '3.7'
 pydantic-core==2.14.6; python_version >= '3.7'
+pydub==0.25.1
 pygments==2.17.2; python_version >= '3.7'
 pyparsing==3.1.1; python_full_version >= '3.6.8'
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+python-multipart==0.0.6; python_version >= '3.7'
 pytz==2023.3.post1
 pywin32==306; sys_platform == 'win32' and platform_python_implementation != 'PyPy'
+pyyaml==6.0.1; python_version >= '3.6'
 pyzmq==25.1.2; python_version >= '3.6'
+referencing==0.32.1; python_version >= '3.8'
 requests==2.31.0; python_version >= '3.7'
+rich==13.7.0
+rpds-py==0.16.2; python_version >= '3.8'
 scikit-learn==1.3.2; python_version >= '3.8'
 scipy==1.11.4; python_version >= '3.9'
 seaborn==0.13.1; python_version >= '3.8'
+semantic-version==2.10.0; python_version >= '2.7'
 setuptools==69.0.3; python_version >= '3.8'
+shellingham==1.5.4
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sniffio==1.3.0; python_version >= '3.7'
 stack-data==0.6.3
-starlette==0.32.0.post1; python_version >= '3.8'
+starlette==0.35.1; python_version >= '3.8'
 statsmodels==0.14.1; python_version >= '3.8'
 tabulate==0.9.0; python_version >= '3.7'
 threadpoolctl==3.2.0; python_version >= '3.8'
+tomlkit==0.12.0; python_version >= '3.7'
+toolz==0.12.0; python_version >= '3.5'
 tornado==6.4; python_version >= '3.8'
+tqdm==4.66.1; python_version >= '3.7'
 traitlets==5.14.1; python_version >= '3.8'
+typer[all]==0.9.0; python_version >= '3.6'
 typing-extensions==4.9.0; python_version >= '3.8'
 tzdata==2023.4; python_version >= '2'
 urllib3==2.1.0; python_version >= '3.8'
 uvicorn==0.25.0; python_version >= '3.8'
 wcwidth==0.2.13
+websockets==11.0.3; python_version >= '3.7'
 xarray==2023.12.0; python_version >= '3.9'
