config: setup venv for module 10 dependenciesê

--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,10 @@ numpy = "*"
 gradio = "*"
 streamlit = "*"
 requests = "*"
+plotly = "*"
+nbformat = "*"
+optuna = "*"
+ipywidgets = "*"
 
 [dev-packages]
 pylint = "*"
