--- a/requirements.txt
+++ b/requirements.txt
@@ -1,114 +1,123 @@
 aiofiles==23.2.1; python_version >= '3.7'
-altair==5.2.0; python_version >= '3.8'
+alembic==1.13.1; python_version >= '3.8'
+altair==5.3.0; python_version >= '3.8'
 annotated-types==0.6.0; python_version >= '3.8'
-anyio==4.2.0; python_version >= '3.8'
+anyio==4.3.0; python_version >= '3.8'
 asttokens==2.4.1
 attrs==23.2.0; python_version >= '3.7'
 blinker==1.7.0; python_version >= '3.8'
-cachetools==5.3.2; python_version >= '3.7'
-certifi==2023.11.17; python_version >= '3.6'
+cachetools==5.3.3; python_version >= '3.7'
+certifi==2024.2.2; python_version >= '3.6'
 charset-normalizer==3.3.2; python_full_version >= '3.7.0'
 click==8.1.7; python_version >= '3.7'
 colorama==0.4.6; platform_system == 'Windows'
-comm==0.2.1; python_version >= '3.8'
-contourpy==1.2.0; python_version >= '3.9'
+colorlog==6.8.2; python_version >= '3.6'
+comm==0.2.2; python_version >= '3.8'
+contourpy==1.2.1; python_version >= '3.9'
 cycler==0.12.1; python_version >= '3.8'
-debugpy==1.8.0; python_version >= '3.8'
+debugpy==1.8.1; python_version >= '3.8'
 decorator==5.1.1; python_version >= '3.5'
 executing==2.0.1; python_version >= '3.5'
-fastapi==0.109.0; python_version >= '3.8'
-ffmpy==0.3.1
-filelock==3.13.1; python_version >= '3.8'
-fonttools==4.47.2; python_version >= '3.8'
-fsspec==2023.12.2; python_version >= '3.8'
+fastapi==0.110.1; python_version >= '3.8'
+fastjsonschema==2.19.1
+ffmpy==0.3.2
+filelock==3.13.4; python_version >= '3.8'
+fonttools==4.51.0; python_version >= '3.8'
+fsspec==2024.3.1; python_version >= '3.8'
 gitdb==4.0.11; python_version >= '3.7'
-gitpython==3.1.41; python_version >= '3.7'
-gradio==4.14.0; python_version >= '3.8'
-gradio-client==0.8.0; python_version >= '3.8'
+gitpython==3.1.43; python_version >= '3.7'
+gradio==4.26.0; python_version >= '3.8'
+gradio-client==0.15.1; python_version >= '3.8'
+greenlet==3.0.3; platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
 h11==0.14.0; python_version >= '3.7'
-httpcore==1.0.2; python_version >= '3.8'
-httpx==0.26.0; python_version >= '3.8'
-huggingface-hub==0.20.2; python_full_version >= '3.8.0'
-idna==3.6; python_version >= '3.5'
-importlib-metadata==7.0.1; python_version >= '3.8'
-importlib-resources==6.1.1; python_version >= '3.8'
-ipykernel==6.28.0; python_version >= '3.8'
-ipython==8.20.0; python_version >= '3.10'
+httpcore==1.0.5; python_version >= '3.8'
+httpx==0.27.0; python_version >= '3.8'
+huggingface-hub==0.22.2; python_full_version >= '3.8.0'
+idna==3.7; python_version >= '3.5'
+importlib-resources==6.4.0; python_version >= '3.8'
+ipykernel==6.29.4; python_version >= '3.8'
+ipython==8.23.0; python_version >= '3.10'
+ipywidgets==8.1.2; python_version >= '3.7'
 jedi==0.19.1; python_version >= '3.6'
 jinja2==3.1.3; python_version >= '3.7'
-joblib==1.3.2; python_version >= '3.7'
-jsonschema==4.20.0; python_version >= '3.8'
+joblib==1.4.0; python_version >= '3.8'
+jsonschema==4.21.1; python_version >= '3.8'
 jsonschema-specifications==2023.12.1; python_version >= '3.8'
-jupyter-client==8.6.0; python_version >= '3.8'
-jupyter-core==5.7.1; python_version >= '3.8'
+jupyter-client==8.6.1; python_version >= '3.8'
+jupyter-core==5.7.2; python_version >= '3.8'
+jupyterlab-widgets==3.0.10; python_version >= '3.7'
 kiwisolver==1.4.5; python_version >= '3.7'
+mako==1.3.3; python_version >= '3.8'
 markdown-it-py==3.0.0; python_version >= '3.8'
-markupsafe==2.1.3; python_version >= '3.7'
-matplotlib==3.8.2; python_version >= '3.9'
-matplotlib-inline==0.1.6; python_version >= '3.5'
+markupsafe==2.1.5; python_version >= '3.7'
+matplotlib==3.8.4; python_version >= '3.9'
+matplotlib-inline==0.1.7; python_version >= '3.8'
 mdurl==0.1.2; python_version >= '3.7'
-nest-asyncio==1.5.8; python_version >= '3.5'
-numpy==1.26.3; python_version >= '3.9'
-orjson==3.9.10; python_version >= '3.8'
-packaging==23.2; python_version >= '3.7'
-pandas==2.1.4; python_version >= '3.9'
+nbformat==5.10.4; python_version >= '3.8'
+nest-asyncio==1.6.0; python_version >= '3.5'
+numpy==1.26.4; python_version >= '3.9'
+optuna==3.6.1; python_version >= '3.7'
+orjson==3.10.0; python_version >= '3.8'
+packaging==24.0; python_version >= '3.7'
+pandas==2.2.2; python_version >= '3.9'
 pandas-flavor==0.6.0
-parso==0.8.3; python_version >= '3.6'
+parso==0.8.4; python_version >= '3.6'
 patsy==0.5.6
-pillow==10.2.0; python_version >= '3.8'
+pillow==10.3.0; python_version >= '3.8'
 pingouin==0.5.4
-platformdirs==4.1.0; python_version >= '3.8'
+platformdirs==4.2.0; python_version >= '3.8'
+plotly==5.20.0; python_version >= '3.8'
 prompt-toolkit==3.0.43; python_full_version >= '3.7.0'
-protobuf==4.25.2; python_version >= '3.8'
-psutil==5.9.7; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+protobuf==4.25.3; python_version >= '3.8'
+psutil==5.9.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 pure-eval==0.2.2
-pyarrow==14.0.2; python_version >= '3.8'
-pydantic==2.5.3; python_version >= '3.7'
-pydantic-core==2.14.6; python_version >= '3.7'
+pyarrow==15.0.2; python_version >= '3.8'
+pydantic==2.7.0; python_version >= '3.8'
+pydantic-core==2.18.1; python_version >= '3.8'
 pydeck==0.8.1b0; python_version >= '3.7'
 pydub==0.25.1
 pygments==2.17.2; python_version >= '3.7'
-pyparsing==3.1.1; python_full_version >= '3.6.8'
-python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-python-multipart==0.0.6; python_version >= '3.7'
-pytz==2023.3.post1
+pyparsing==3.1.2; python_full_version >= '3.6.8'
+python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+python-multipart==0.0.9; python_version >= '3.8'
+pytz==2024.1
 pywin32==306; sys_platform == 'win32' and platform_python_implementation != 'PyPy'
 pyyaml==6.0.1; python_version >= '3.6'
-pyzmq==25.1.2; python_version >= '3.6'
-referencing==0.32.1; python_version >= '3.8'
+pyzmq==26.0.0; python_version >= '3.7'
+referencing==0.34.0; python_version >= '3.8'
 requests==2.31.0; python_version >= '3.7'
-rich==13.7.0; python_full_version >= '3.7.0'
-rpds-py==0.17.1; python_version >= '3.8'
-scikit-learn==1.3.2; python_version >= '3.8'
-scipy==1.11.4; python_version >= '3.9'
-seaborn==0.13.1; python_version >= '3.8'
+rich==13.7.1; python_full_version >= '3.7.0'
+rpds-py==0.18.0; python_version >= '3.8'
+ruff==0.3.7; sys_platform != 'emscripten'
+scikit-learn==1.4.2; python_version >= '3.9'
+scipy==1.13.0; python_version >= '3.9'
+seaborn==0.13.2; python_version >= '3.8'
 semantic-version==2.10.0; python_version >= '2.7'
-shellingham==1.5.4
+shellingham==1.5.4; python_version >= '3.7'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 smmap==5.0.1; python_version >= '3.7'
-sniffio==1.3.0; python_version >= '3.7'
+sniffio==1.3.1; python_version >= '3.7'
+sqlalchemy==2.0.29; python_version >= '3.7'
 stack-data==0.6.3
-starlette==0.35.1; python_version >= '3.8'
+starlette==0.37.2; python_version >= '3.8'
 statsmodels==0.14.1; python_version >= '3.8'
-streamlit==1.30.0; python_version >= '3.8' and python_full_version != '3.9.7'
+streamlit==1.33.0; python_version >= '3.8' and python_full_version != '3.9.7'
 tabulate==0.9.0; python_version >= '3.7'
 tenacity==8.2.3; python_version >= '3.7'
-threadpoolctl==3.2.0; python_version >= '3.8'
+threadpoolctl==3.4.0; python_version >= '3.8'
 toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 tomlkit==0.12.0; python_version >= '3.7'
-toolz==0.12.0; python_version >= '3.5'
+toolz==0.12.1; python_version >= '3.7'
 tornado==6.4; python_version >= '3.8'
-tqdm==4.66.1; python_version >= '3.7'
-traitlets==5.14.1; python_version >= '3.8'
-typer[all]==0.9.0; python_version >= '3.6'
-typing-extensions==4.9.0; python_version >= '3.8'
-tzdata==2023.4; python_version >= '2'
-tzlocal==5.2; python_version >= '3.8'
-urllib3==2.1.0; python_version >= '3.8'
-uvicorn==0.25.0; python_version >= '3.8'
-validators==0.22.0; python_version >= '3.8'
-watchdog==3.0.0; platform_system != 'Darwin'
+tqdm==4.66.2; python_version >= '3.7'
+traitlets==5.14.2; python_version >= '3.8'
+typer[all]==0.12.3; sys_platform != 'emscripten'
+typing-extensions==4.11.0; python_version >= '3.8'
+tzdata==2024.1; python_version >= '2'
+urllib3==2.2.1; python_version >= '3.8'
+uvicorn==0.29.0; python_version >= '3.8'
+watchdog==4.0.0; platform_system != 'Darwin'
 wcwidth==0.2.13
 websockets==11.0.3; python_version >= '3.7'
-xarray==2023.12.0; python_version >= '3.9'
-zipp==3.17.0; python_version >= '3.8'
+widgetsnbextension==4.0.10; python_version >= '3.7'
+xarray==2024.3.0; python_version >= '3.9'
