config: install module 11 - Naive Bayes - dependencies

--- a/Pipfile
+++ b/Pipfile
@@ -27,6 +27,10 @@ plotly = "*"
 nbformat = "*"
 optuna = "*"
 ipywidgets = "*"
+sweetviz = "*"
+flask = "*"
+flask-pydantic = "*"
+pyarrow = "*"
 
 [dev-packages]
 pylint = "*"
