--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,8 @@ fastapi==0.110.1; python_version >= '3.8'
 fastjsonschema==2.19.1
 ffmpy==0.3.2
 filelock==3.13.4; python_version >= '3.8'
+flask==3.0.3; python_version >= '3.8'
+flask-pydantic==0.12.0; python_version >= '3.7'
 fonttools==4.51.0; python_version >= '3.8'
 fsspec==2024.3.1; python_version >= '3.8'
 gitdb==4.0.11; python_version >= '3.7'
@@ -38,6 +40,7 @@ importlib-resources==6.4.0; python_version >= '3.8'
 ipykernel==6.29.4; python_version >= '3.8'
 ipython==8.23.0; python_version >= '3.10'
 ipywidgets==8.1.2; python_version >= '3.7'
+itsdangerous==2.2.0; python_version >= '3.8'
 jedi==0.19.1; python_version >= '3.6'
 jinja2==3.1.3; python_version >= '3.7'
 joblib==1.4.0; python_version >= '3.8'
@@ -57,7 +60,7 @@ nbformat==5.10.4; python_version >= '3.8'
 nest-asyncio==1.6.0; python_version >= '3.5'
 numpy==1.26.4; python_version >= '3.9'
 optuna==3.6.1; python_version >= '3.7'
-orjson==3.10.0; python_version >= '3.8'
+orjson==3.10.1; python_version >= '3.8'
 packaging==24.0; python_version >= '3.7'
 pandas==2.2.2; python_version >= '3.9'
 pandas-flavor==0.6.0
@@ -66,7 +69,7 @@ patsy==0.5.6
 pillow==10.3.0; python_version >= '3.8'
 pingouin==0.5.4
 platformdirs==4.2.0; python_version >= '3.8'
-plotly==5.20.0; python_version >= '3.8'
+plotly==5.21.0; python_version >= '3.8'
 prompt-toolkit==3.0.43; python_full_version >= '3.7.0'
 protobuf==4.25.3; python_version >= '3.8'
 psutil==5.9.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
@@ -100,8 +103,9 @@ sniffio==1.3.1; python_version >= '3.7'
 sqlalchemy==2.0.29; python_version >= '3.7'
 stack-data==0.6.3
 starlette==0.37.2; python_version >= '3.8'
-statsmodels==0.14.1; python_version >= '3.8'
+statsmodels==0.14.2; python_version >= '3.9'
 streamlit==1.33.0; python_version >= '3.8' and python_full_version != '3.9.7'
+sweetviz==2.3.1; python_version >= '3.7'
 tabulate==0.9.0; python_version >= '3.7'
 tenacity==8.2.3; python_version >= '3.7'
 threadpoolctl==3.4.0; python_version >= '3.8'
@@ -119,5 +123,6 @@ uvicorn==0.29.0; python_version >= '3.8'
 watchdog==4.0.0; platform_system != 'Darwin'
 wcwidth==0.2.13
 websockets==11.0.3; python_version >= '3.7'
+werkzeug==3.0.2; python_version >= '3.8'
 widgetsnbextension==4.0.10; python_version >= '3.7'
 xarray==2024.3.0; python_version >= '3.9'
