--- a/Pipfile
+++ b/Pipfile
@@ -31,6 +31,9 @@ sweetviz = "*"
 flask = "*"
 flask-pydantic = "*"
 pyarrow = "*"
+ppscore = "*"
+setuptools = "*"
+shap = "*"
 
 [dev-packages]
 pylint = "*"
